--- a/Weather/Weather/WTCityMainViewController.xib
+++ b/Weather/Weather/WTCityMainViewController.xib
@@ -138,15 +138,15 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIPagingEnabled">YES</bool>
 			</object>
-			<object class="IBUIView" id="618551637">
+			<object class="IBUIView" id="489823573">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIButton" id="1057278841">
-						<reference key="NSNextResponder" ref="618551637"/>
+						<reference key="NSNextResponder" ref="489823573"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{280, 18}, {29, 29}}</string>
-						<reference key="NSSuperview" ref="618551637"/>
+						<reference key="NSSuperview" ref="489823573"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -173,10 +173,10 @@
 						</object>
 					</object>
 					<object class="IBUIButton" id="410281635">
-						<reference key="NSNextResponder" ref="618551637"/>
+						<reference key="NSNextResponder" ref="489823573"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 13}, {73, 30}}</string>
-						<reference key="NSSuperview" ref="618551637"/>
+						<reference key="NSSuperview" ref="489823573"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1057278841"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -188,7 +188,7 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="92389407">
+						<object class="NSColor" key="IBUIHighlightedTitleColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -213,14 +213,14 @@
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="410281635"/>
-				<reference key="IBUIBackgroundColor" ref="92389407"/>
+				<reference key="IBUIBackgroundColor" ref="168400863"/>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIPinchGestureRecognizer" id="238882337"/>
+			<object class="IBUIPinchGestureRecognizer" id="890133645"/>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
@@ -276,7 +276,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">footView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="618551637"/>
+						<reference key="destination" ref="489823573"/>
 					</object>
 					<int key="connectionID">259</int>
 				</object>
@@ -317,7 +317,7 @@
 					<object class="IBCocoaTouchOutletCollectionConnection" key="connection">
 						<string key="label">gestureRecognizers</string>
 						<reference key="source" ref="752597510"/>
-						<reference key="destination" ref="238882337"/>
+						<reference key="destination" ref="890133645"/>
 						<bool key="addsContentToExistingCollection">YES</bool>
 					</object>
 					<int key="connectionID">261</int>
@@ -325,7 +325,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">pinchHandler:</string>
-						<reference key="source" ref="238882337"/>
+						<reference key="source" ref="890133645"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">262</int>
@@ -642,9 +642,9 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">247</int>
-						<reference key="object" ref="618551637"/>
+						<reference key="object" ref="489823573"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="1287777">
+							<object class="IBNSLayoutConstraint" id="293800540">
 								<reference key="firstItem" ref="1057278841"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -656,17 +656,17 @@
 									<double key="value">0.0</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="618551637"/>
+								<reference key="containingView" ref="489823573"/>
 								<int key="scoringType">6</int>
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 								<bool key="placeholder">NO</bool>
 							</object>
-							<object class="IBNSLayoutConstraint" id="150509647">
+							<object class="IBNSLayoutConstraint" id="314012470">
 								<reference key="firstItem" ref="1057278841"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="618551637"/>
+								<reference key="secondItem" ref="489823573"/>
 								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
 								<string key="multiplierString">1</string>
@@ -674,14 +674,14 @@
 									<double key="value">20</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="618551637"/>
+								<reference key="containingView" ref="489823573"/>
 								<int key="scoringType">8</int>
 								<float key="scoringTypeFloat">23</float>
 								<int key="contentType">3</int>
 								<bool key="placeholder">NO</bool>
 							</object>
-							<object class="IBNSLayoutConstraint" id="388078651">
-								<reference key="firstItem" ref="618551637"/>
+							<object class="IBNSLayoutConstraint" id="198754529">
+								<reference key="firstItem" ref="489823573"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="1057278841"/>
@@ -692,17 +692,17 @@
 									<double key="value">14</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="618551637"/>
+								<reference key="containingView" ref="489823573"/>
 								<int key="scoringType">3</int>
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 								<bool key="placeholder">NO</bool>
 							</object>
-							<object class="IBNSLayoutConstraint" id="872132414">
+							<object class="IBNSLayoutConstraint" id="632162558">
 								<reference key="firstItem" ref="410281635"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="618551637"/>
+								<reference key="secondItem" ref="489823573"/>
 								<int key="secondAttribute">5</int>
 								<float key="multiplier">1</float>
 								<string key="multiplierString">1</string>
@@ -710,7 +710,7 @@
 									<double key="value">20</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="618551637"/>
+								<reference key="containingView" ref="489823573"/>
 								<int key="scoringType">8</int>
 								<float key="scoringTypeFloat">23</float>
 								<int key="contentType">3</int>
@@ -725,7 +725,7 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">91</int>
 						<reference key="object" ref="1057278841"/>
-						<reference key="parent" ref="618551637"/>
+						<reference key="parent" ref="489823573"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">97</int>
@@ -750,7 +750,7 @@
 								<bool key="placeholder">NO</bool>
 							</object>
 						</array>
-						<reference key="parent" ref="618551637"/>
+						<reference key="parent" ref="489823573"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">106</int>
@@ -759,27 +759,27 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">252</int>
-						<reference key="object" ref="872132414"/>
-						<reference key="parent" ref="618551637"/>
+						<reference key="object" ref="632162558"/>
+						<reference key="parent" ref="489823573"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">256</int>
-						<reference key="object" ref="388078651"/>
-						<reference key="parent" ref="618551637"/>
+						<reference key="object" ref="198754529"/>
+						<reference key="parent" ref="489823573"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">257</int>
-						<reference key="object" ref="150509647"/>
-						<reference key="parent" ref="618551637"/>
+						<reference key="object" ref="314012470"/>
+						<reference key="parent" ref="489823573"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">258</int>
-						<reference key="object" ref="1287777"/>
-						<reference key="parent" ref="618551637"/>
+						<reference key="object" ref="293800540"/>
+						<reference key="parent" ref="489823573"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">260</int>
-						<reference key="object" ref="238882337"/>
+						<reference key="object" ref="890133645"/>
 						<reference key="parent" ref="0"/>
 					</object>
 				</array>
@@ -822,10 +822,10 @@
 				<string key="247.IBPersistedLastKnownCanvasPosition">{328, 679}</string>
 				<string key="247.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array key="247.IBViewMetadataConstraints">
-					<reference ref="872132414"/>
-					<reference ref="388078651"/>
-					<reference ref="150509647"/>
-					<reference ref="1287777"/>
+					<reference ref="632162558"/>
+					<reference ref="198754529"/>
+					<reference ref="314012470"/>
+					<reference ref="293800540"/>
 				</array>
 				<string key="252.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="256.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -877,16 +877,17 @@
 						<string key="pinchHandler:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="cfBtnClicked:" id="560716379">
+						<object class="IBActionInfo" key="cfBtnClicked:" id="219557237">
 							<string key="name">cfBtnClicked:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="pinchHandler:" id="625913696">
+						<object class="IBActionInfo" key="pinchHandler:" id="456223896">
 							<string key="name">pinchHandler:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="_cityName">UILabel</string>
 						<string key="bgView">UIImageView</string>
 						<string key="cityDetailInfoScrl">UIScrollView</string>
 						<string key="cityDetailInfoScrlPageCtl">UIPageControl</string>
@@ -895,6 +896,10 @@
 						<string key="footView">UIView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="_cityName" id="158721276">
+							<string key="name">_cityName</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="bgView" id="828942331">
 							<string key="name">bgView</string>
 							<string key="candidateClassName">UIImageView</string>
@@ -915,7 +920,7 @@
 							<string key="name">cityMainView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="footView" id="971161655">
+						<object class="IBToOneOutletInfo" key="footView" id="139959595">
 							<string key="name">footView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
@@ -942,7 +947,7 @@
 						<reference key="cityDetailInfoScrlPageCtl" ref="846683971"/>
 						<reference key="cityMainTableView" ref="233159522"/>
 						<reference key="cityMainView" ref="258572"/>
-						<reference key="footView" ref="971161655"/>
+						<reference key="footView" ref="139959595"/>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
@@ -956,9 +961,17 @@
 						<string key="pinchHandler:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<reference key="cfBtnClicked:" ref="560716379"/>
-						<reference key="pinchHandler:" ref="625913696"/>
+						<reference key="cfBtnClicked:" ref="219557237"/>
+						<reference key="pinchHandler:" ref="456223896"/>
 					</dictionary>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">_cityName</string>
+						<string key="NS.object.0">UILabel</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">_cityName</string>
+						<reference key="NS.object.0" ref="158721276"/>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Weather/WTCityMainViewController.m</string>
